fix: z-index of media player to stay on top of charts

--- a/src/components/MediaPlayer/MediaPlayer.module.css
+++ b/src/components/MediaPlayer/MediaPlayer.module.css
@@ -3,6 +3,7 @@
   bottom: 0px;
   width: 100%;
   left: 0px;
+  z-index: 20;
 }
 
 .mediaPlayerBody {
